Fixed overlap issue.

--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,11 @@
-
 nav#main-navbar{
     display: block;
     background-color: blue;
     width: 100%;
-    float:left;
+
     right: 50%;
 }
 div#navbar-container{
-    display:block;
     position: relative;
     left: 50%;
 }
@@ -21,6 +19,8 @@ div#navbar-container ul{
     text-decoration: underline overline;
 }
 div#navbar-container ul li a{
+    
+    display: block;
     text-decoration: none;
     color:white;
     float:left;
